--- a/css/styles.css
+++ b/css/styles.css
@@ -9,3 +9,16 @@ body {
   text-align: center;
   color: #fff;
 }
+.header h3 {
+  padding: 15px;
+  font-weight: 700;
+  font-size: xx-large;
+}
+
+.header img {
+  float: left;
+  margin-left: 0;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+}
