--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,40 @@ body {
   width: 80px;
   height: 80px;
 }
+.info p {
+  font-size: larger;
+  font-weight: 400;
+}
+
+.tg {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.tg td {
+  border-color: wheat;
+  border-style: solid;
+  border-width: 1px;
+  font-family: 'Arial', sans-serif;
+  font-size: 14px;
+  overflow: hidden;
+  padding: 10px 5px;
+  word-break: normal;
+}
+
+.tg th {
+  border-color: wheat;
+  border-style: solid;
+  border-width: 1px;
+  font-family: 'Arial', sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  overflow: hidden;
+  padding: 10px 5px;
+  word-break: normal;
+}
+
+.tg .tg-baqh {
+  text-align: center;
+  vertical-align: top
+}
