--- a/css/styles.css
+++ b/css/styles.css
@@ -59,3 +59,42 @@ body {
   text-align: center;
   vertical-align: top
 }
+form {
+  text-align: left;
+  border-radius: 10px;
+  background: url(../images/logo.jpg);
+  padding: 20px;
+  width: 80%;
+  margin-left: 25%;
+}
+
+legend {
+  text-align: center;
+  color: rgb(250, 240, 235);
+}
+
+input[type=number],
+[type="radio"] {
+  width: 100%;
+  padding: 8px 10px;
+  margin: 5px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: grey;
+  color: white;
+  padding: 10px 15px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: black;
+}
