--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
-  background: url(../images/bg.jpg) rgba(0, 0, 0, 0.2);
+  background: url(../images/abg.jpg) rgba(0, 0, 0, 0.2);
+  display: flex;
   /* background-position: center; */
   /* background-repeat: no-repeat; */
   /* background-size: cover; */
@@ -7,7 +8,7 @@ body {
   /* width: 100%; */
   font-family: cursive;
   text-align: center;
-  color: #fff;
+  color: whitesmoke;
 }
 .header h3 {
   padding: 15px;
