--- a/css/styles.css
+++ b/css/styles.css
@@ -99,3 +99,22 @@ input[type=submit] {
 input[type=submit]:hover {
   background-color: black;
 }
+
+#footer p{
+  text-align: center;
+}
+#footer .section-a{
+  background-color: black;
+  padding: 0%;
+  margin: 0%;
+}
+.section-a i{
+  color: #fff;
+  padding: 1%;
+  margin: 1%;
+  border-radius: 10px;
+}
+.section-b p{
+  text-transform: uppercase;
+  text-align: center;
+}
