--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: url(../images/abg.jpg) rgba(0, 0, 0, 0.2);
+  background: url(../images/bg.jpg) rgba(0, 0, 0, 0.2);
   display: flex;
   /* background-position: center; */
   /* background-repeat: no-repeat; */
